<resources>
    <string name="app_name">waste_drug</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_phone">전화번호</string>
    <string name="text_address">서울특별시 OO구</string>
    <string name="text_name">OO 약국</string>
    <string name="text_drugBox">수거함 정보</string>
    <string name="text_info_pharmacy">약국 정보</string>
    <string name="text_time">주말 / 공휴일</string>
    <string name="text_search">수거함/약국 정보 검색</string>
    <string name="detail_tv_title_string">입력하신 약의 정보입니다!</string>
    <string name="detail_tv_name_text_string">약 이름</string>
    <string name="detail_tv_date_text_string">유통기한</string>
    <string name="detail_tv_effect_text_string">효능 및 효과</string>
    <string name="detail_tv_photo_string">사진 첨부</string>
    <string name="detail_tv_option_text_string">추가 정보</string>
    <string name="main_tv_search_collection_box_string">수거함/수거약국 검색</string>
    <string name="main_tv_search_pharmacy_string">심야/휴일 약국 검색</string>
    <string name="main_tv_drug_recycle_string">폐의약품\n분리배출 방법\n</string>
    <string name="main_tv_drug_note_string">개인 의약품 관리</string>
    <string name="main_tv_benefit_string">폐의약품\n배출 QR 인증</string>
    <string name="main_tv_shipping_service_string">약 구독 서비스</string>
    <string name="recycle_tv_recycle_text_string">아이콘을 클릭해 올바른 분리배출 방법을 확인해보세요!</string>
    <string name="recycle_tv_search_collection_box_string">알약</string>
    <string name="recycle_tv_powder_string">가루약</string>
    <string name="recycle_tv_liquid_string">물약</string>
    <string name="recycle_tv_ointment_string">연고 / 안약</string>
    <string name="register_tv_title_string">가지고 있는 약의 정보들을 입력해주세요!</string>
    <string name="register_tv_name_string">약 이름</string>
    <string name="register_tv_date_string">유통기한</string>
    <string name="register_tv_effect">효능 및 효과</string>
    <string name="register_tv_photo_string">사진 첨부</string>
    <string name="register_tv_image_string">클릭해서 이미지를 가져오세요!</string>
    <string name="register_tv_option_string">추가 정보 (선택)</string>
    <string name="register_btn_register_string">등록</string>
    <string name="drug_item_tv_subscribe_string">구독 중!</string>
    <string name="shipping_item_tv_effect_text_string">효능 및 효과</string>
</resources>