<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#8EB4D3"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/tv_recycle_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/lgsmhasb"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/recycle_tv_recycle_text_string"
        android:textColor="@color/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp">

            <RelativeLayout
                android:id="@+id/rl_pill"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_search_collection_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_pill"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lgsmhasb"
                    android:text="@string/recycle_tv_search_collection_box_string"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_pill"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/pill1"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp">

            <RelativeLayout
                android:id="@+id/rl_powder"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_powder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_powder"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lgsmhasb"
                    android:text="@string/recycle_tv_powder_string"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_powder"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/powder1"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp">

            <RelativeLayout
                android:id="@+id/rl_liquid"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_liquid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_liquid"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lgsmhasb"
                    android:text="@string/recycle_tv_liquid_string"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_liquid"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="false"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/liquid1"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp">

            <RelativeLayout
                android:id="@+id/rl_ointment"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_ointment"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/ointment1"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_ointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_ointment"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/lgsmhasb"
                    android:text="@string/recycle_tv_ointment_string"
                    android:textColor="@color/textColor"
                    android:textSize="16sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>